--- a/index.html
+++ b/index.html
@@ -1,2 +1,50 @@
-coucou
-bonjour
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Café Équitable</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Café Équitable</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="produits.html">Produits</a></li>
+                <li><a href="panier.html">Panier</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>Bienvenue sur Café Équitable</h2>
+            <p>Découvrez notre sélection de cafés issus du commerce équitable, cultivés avec soin par des producteurs du monde entier.</p>
+            <a href="produits.html" class="btn">Voir nos produits</a>
+        </section>
+        <section class="featured-products">
+            <h2>Nos Produits En Vedette</h2>
+            <div class="product">
+                <img src="cafe1.jpg" alt="Café équitable">
+                <h3>Café Arabica</h3>
+                <p>Origine: Colombie</p>
+                <p>Prix: $10.99</p>
+                <a href="#" class="btn">Ajouter au panier</a>
+            </div>
+            <div class="product">
+                <img src="cafe2.jpg" alt="Café équitable">
+                <h3>Café Robusta</h3>
+                <p>Origine: Vietnam</p>
+                <p>Prix: $9.99</p>
+                <a href="#" class="btn">Ajouter au panier</a>
+            </div>
+            <!-- Ajoutez d'autres produits en vedette ici -->
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Café Équitable. Tous droits réservés.</p>
+    </footer>
+</body>
+</html>
